infra-instance/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web-ingress-route
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/web`)
      priority: 10
      services:
        - kind: Service
          name: web-service
          port: 80
      middlewares:
        - name: strip-web-prefix
    - kind: Rule
      match: PathPrefix(`/home`)
      priority: 10
      services:
        - kind: Service
          name: web-service
          port: 80

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-web-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - "/web"
    forceSlash: false
